# cgraph

./: CLAUDE.md  Cargo.toml  IDEA.md  README.md
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-typescript-extractor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-SECURITY.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-indexer-analysis-pipeline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-EDGE-GAPS.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
client/: graph.js  index.html
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_smoke.rs
crates/core/: Cargo.toml
crates/core/src/: detect.rs  extractor.rs  lib.rs  model.rs
crates/core/tests/: grammar_test.rs
crates/core/tests/fixtures/: sample.go  sample.py  sample.swift  sample.ts  sample.tsx
crates/indexer/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: graph_api.rs  lib.rs  static_assets.rs
crates/ts-extractor/: Cargo.toml
(+51 files in other folders)
