[package]
name = "cg"
version.workspace = true
edition.workspace = true

[dependencies]
cgraph-core = { path = "../core" }
cgraph-indexer = { path = "../indexer" }
cgraph-ts-extractor = { path = "../ts-extractor" }
clap = { version = "4.6.1", features = ["derive", "cargo"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
