[package]
name = "cgraph-core"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = "0.26.8"
tree-sitter-typescript = "0.23.2"
tree-sitter-swift = "0.7.1"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
