[package]
name = "cgraph-server"
version.workspace = true
edition.workspace = true

[dependencies]
cgraph-indexer = { path = "../indexer" }
cgraph-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
